src/pages/Logement/Logement.css
/* src/pages/Logement/Logement.css */
.logement {
  padding: 1.25rem;
  height: auto;
  max-width: 1950px;
  margin: 2rem auto;
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
}

.logement-header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1rem;
  width: 100%;
}

.logement-info h2 {
  color: #ff6060;
  margin-bottom: 0.5rem;
  font-size: 2.25rem;
}

.logement-info p {
  color: black;
  font-size: 1.25rem;
}

.logement-host {
  color: #ff6060;
  font-size: 1.12rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.3rem;
  text-align: center;
  max-width: 100px;
  margin: 0 auto;
}

.logement-host .star-rating {
  margin-top: 0.2rem;
  display: flex;
  justify-content: center;
}
.logement-host img {
  width: 50px;
  height: 50px;
  border-radius: 25px;
  margin-left: 1rem;
}

.logement-tags {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin: 1rem 0;
}

.logement-tag {
  background-color: #ff6060;
  color: white;
  padding: 0.5rem 1rem;
  border-radius: 5px;
}

.logement-collapses {
  margin-top: 2rem;
  display: flex;
  gap: 3rem;
}

.host-name {
  display: flex;
  width: auto;
}

@media screen and (max-width: 768px) {
  .collapse-header h2 {
    font-size: 0.75rem;
  }

  .collapse-content {
    font-size: 1rem;
  }

  .logement-collapses {
    flex-wrap: wrap;
    gap: 0.5rem;
  }

  .logement-host {
    display: flex;
    flex-direction: row-reverse;
    gap: 1.25rem;
  }

  .logement-header {
    align-items: center;
    flex-direction: column;
    height: auto;
    justify-content: center;
    padding: 1rem 1rem 0 0;
    gap: 1.5rem;
  }

  .logement-info h2 {
    font-size: 1.125rem;
    line-height: 1.563rem;
  }

  .logement-info p {
    font-size: 0.875rem;
  }
}

